--- a/ipm/index.html
+++ b/ipm/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Twilio IP Messaging Quickstart</title>
-  <link rel="shortcut icon" href="//www.twilio.com/marketing/bundles/marketing/img/favicons/favicon.ico">
+  <title>CHI Messaging</title>
+  <!-- <link rel="shortcut icon" href="//www.twilio.com/marketing/bundles/marketing/img/favicons/favicon.ico"> -->
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
   <header>
-  <a href="https://www.twilio.com/docs/api/ip-messaging/guides/quickstart-js" 
-    target="_blank">Read the getting started guide
-    <i class="fa fa-fw fa-external-link"></i>
-  </a>
+  <!-- <a href="https://www.twilio.com/docs/api/ip-messaging/guides/quickstart-js" 
+    target="_blank">Read the getting started guide -->
+<!--     <i class="fa fa-fw fa-external-link"></i>
+ -->  </a>
   </header>
 
   <section>
